<resources>
    <string name="appName">Music</string>

    <!--Drawer-->
    <string name="drawerOpen">Open navigation drawer</string>
    <string name="drawerClose">Close navigation drawer</string>

    <!--Navigation-->
    <string name="navHome">Home</string>
    <string name="navPlayQueue">Play queue</string>
    <string name="navPlaylist">Playlist</string>
    <string name="navArtist">Artists</string>
    <string name="navAlbum">Albums</string>
    <string name="navSong">Songs</string>
    <string name="navGenres">Genres</string>
    <string name="navSetting">Setting</string>
    <string name="navHelp">Help</string>
    <string name="actionSearch">Search</string>
    <string name="play_queue">Play queue</string>
    <string name="open">Open</string>
    <string name="recently_played">Recently Played</string>
    <string name="newly_added">Newly added</string>
    <string name="album_cover">Album cover</string>
    <string name="more_options">More Options</string>
    <string name="playing_song">Playing song</string>
</resources>
