<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/songGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:title="@string/navHome" />
        <item
            android:id="@+id/navPlayQueue"
            android:title="@string/navPlayQueue" />
        <item
            android:id="@+id/navPlaylist"
            android:title="@string/navPlaylist" />
        <item
            android:id="@+id/navArtist"
            android:title="@string/navArtist" />
        <item
            android:id="@+id/navAlbum"
            android:title="@string/navAlbum" />
        <item
            android:id="@+id/navSong"
            android:title="@string/navSong" />
        <item
            android:id="@+id/navGenre"
            android:title="@string/navGenres" />
    </group>
    <group android:id="@+id/contactGroup">
        <item
            android:id="@+id/navSetting"
            android:title="@string/navSetting" />
        <item
            android:id="@+id/navHelp"
            android:title="@string/navHelp" />
    </group>

</menu>